--- a/home.html
+++ b/home.html
@@ -20,7 +20,9 @@
             <!-- <<<<available balance>>>>> -->
             <div class="stats shadow">
               <div class="stat">
-                <div class="stat-value">89,400</div>
+                <div id="current-balance" class="stat-value">
+                    89400
+                </div>
                 <div class="stat-desc">Available Balance</div>
               </div>
             </div>
