--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
             </div>
             <div class="divider"></div>
             <!-- <<<<Add money form start>>>> -->
-            <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+            <div class=" hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
               <form class="card-body">
                 <div class="form-control">
                   <label class="label">
@@ -65,6 +65,39 @@
               </form>
             </div>
             <!-- <<<<Add money form end>>>> -->
+            <!-- <<<<<Cash out section start>>>>> -->
+                <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <form class="card-body">
+                      <div class="form-control">
+                        <label class="label">
+                          <span class="label-text">Amount</span>
+                        </label>
+                        <input
+                          id="input-cash-out"
+                          type="text"
+                          placeholder="Amount"
+                          class="input input-bordered"
+                          required
+                        />
+                      </div>
+                      <div class="form-control">
+                        <label class="label">
+                          <span class="label-text">Pin</span>
+                        </label>
+                        <input
+                          id="cash-out-input-pin-number"
+                          type="password"
+                          placeholder="Pin Number"
+                          class="input input-bordered" autocomplete="off"
+                          required
+                        />
+                      </div>
+                      <div class="form-control mt-6">
+                        <button id="btn-cash-out" class="btn btn-primary">Cash Out</button>
+                      </div>
+                    </form>
+                  </div>
+            <!-- <<<<<Cash out section end>>>>> -->
           </div>
         </div>
       </div>
