--- a/home.html
+++ b/home.html
@@ -28,12 +28,12 @@
             </div>
             <div class="divider"></div>
             <div>
-              <button class="btn btn-lg">Add Money</button>
-              <button class="btn btn-lg">Cash Out</button>
+              <button id="btn-show-add-money" class="btn btn-lg">Add Money</button>
+              <button id="btn-show-cash-out" class="btn btn-lg">Cash Out</button>
             </div>
             <div class="divider"></div>
             <!-- <<<<Add money form start>>>> -->
-            <div class=" hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+            <div id="add-money-form" class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
               <form class="card-body">
                 <div class="form-control">
                   <label class="label">
@@ -66,7 +66,7 @@
             </div>
             <!-- <<<<Add money form end>>>> -->
             <!-- <<<<<Cash out section start>>>>> -->
-                <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                <div id="cash-out-form" class=" hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                     <form class="card-body">
                       <div class="form-control">
                         <label class="label">
@@ -103,5 +103,6 @@
       </div>
     </main>
     <script src="JS/home.js"></script>
+    <script src="JS/features.js"></script>
   </body>
 </html>
